Login validation with backend and new user

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@reduxjs/toolkit": "^2.11.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase": "^12.7.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "mui": "^0.0.1",
     "react": "^19.2.0",
