--- a/src/hepl-backend/package.json
+++ b/src/hepl-backend/package.json
@@ -16,7 +16,8 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.4",
     "multer": "^2.0.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
