--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.7.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
